--- a/website.html
+++ b/website.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code Snippets</title>
+  <title>CIV Group 203 Codes</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -115,7 +115,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <h1>Code Snippets</h1>
+    <h1>CIV Group 203 Codes</h1>
     <div class="tabs">
       <button class="tab-button active" onclick="switchTab('python')">Python Code</button>
       <button class="tab-button" onclick="switchTab('java')">Java Code</button>
