--- a/website.html
+++ b/website.html
@@ -101,6 +101,7 @@
     code {
       font-family: monospace;
       color: #a3a0a0;
+      line-height: 1.8;
       font-size: 14px;
       background-color: #121212;
       padding: 5px;
