--- a/website.html
+++ b/website.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CIV Group 203 Codes</title>
+  <title>Code Snippets</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Courier, sans-serif;
       margin: 0;
       padding: 0;
       color: white;
@@ -56,6 +56,7 @@
       color: #000;
       font-size: 16px;
       font-weight: bold;
+      font-family: "Courier";
       border-radius: 20px;
       box-shadow: 0px 5px 15px rgba(113, 156, 255, 0.4), 0px -2px 5px rgba(0, 0, 0, 0.3); /* Green underglow */
       transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -99,10 +100,10 @@
     }
 
     code {
-      font-family: monospace;
+      font-family: Courier;
       color: #a3a0a0;
-      line-height: 1.8;
       font-size: 14px;
+      line-height:1.8;
       background-color: #121212;
       padding: 5px;
       border-radius: 4px;
@@ -116,7 +117,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <h1>CIV Group 203 Codes</h1>
+    <h1>Code Snippets</h1>
     <div class="tabs">
       <button class="tab-button active" onclick="switchTab('python')">Python Code</button>
       <button class="tab-button" onclick="switchTab('java')">Java Code</button>
