--- a/website.html
+++ b/website.html
@@ -135,22 +135,38 @@
       <img id="tkdIcon" src="https://cdn-icons-png.flaticon.com/512/685/685352.png" alt="Black Belt" />
       <img id="robotIcon" src="https://cdn-icons-png.flaticon.com/512/4712/4712103.png" alt="Robot" />
     </div>
+    <div>
+      <h2>Intro</h2>
+      <img src="intro1.png"/>
+      <img src="intro2.png"/>
+      <img src="intro3.png"/>
+    </div>
 
     <div id="soccer" class="scroll-section">
       <h2>Soccer Phase</h2>
       <img src="soccerscene.png" alt="Soccer Experience" />
+      <img src="soccersummary1.png" alt="Soccer Experience" />
+      <img src="soccersummary2.png" alt="Soccer Experience" />
     </div>
 
     <div id="tkd" class="scroll-section">
       <h2>Taekwondo Phase</h2>
       <img src="taekwondoscene1.png" alt="Taekwondo Experience" />
       <img src="taekwondoscene2.png" alt="Taekwondo Experience" />
+      <img src="taekwondosummary.png" alt="Soccer Experience" />
     </div>
 
     <div id="robotics" class="scroll-section">
       <h2>Robotics Phase</h2>
       <img src="roboticsscene.png" alt="Robotics Experience" />
+      <img src="roboticssummary.png" alt="Soccer Experience" />
     </div>
+  </div>
+  
+  <div>
+    <h2>Conclusion</h2>
+    <img src="conc1.png"/>
+    <img src="conc2.png"/>
   </div>
 
   <div id="praxis1" class="tab-content">
